--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
       img.checkin-image {
           width: 100%;
+          min-height: 200px;
+          background: #9E9E9E;
+          margin-top: 5px;
       }
 
       img.avatar {
@@ -23,6 +26,7 @@
       .username {
           height: 50px;
           line-height: 50px;
+          margin-left: 60px;
       }
 
       .entry {
@@ -38,6 +42,9 @@
           bottom: 50px;
           top: 0;
           overflow: auto;
+      }
+      #entries p {
+          text-align: center;
       }
       #upload {
           position: absolute;
@@ -77,7 +84,7 @@
     </style>
   </head>
   <body>
-    <div id="entries"></div>
+    <div id="entries"><p>Loading...</p></div>
     <div id="upload">
       <label id="loading">
         Loading...
@@ -213,6 +220,23 @@
 
       firebase.auth().getRedirectResult().then(() => {
         loading.style.display = 'none';
+      });
+
+      firebase.database().ref('entries').on('value', entriesData => {
+        var data = entriesData.val();
+        if (data === null) {
+          entries.innerHTML = '<p>No one checked in yet!</p>';
+          return;
+        }
+        var users = Object.keys(data).map(function (uid) {
+          return data[uid];
+        });
+        if (users.length > 0) {
+          entries.innerHTML = '';
+          users.forEach(function (entry) {
+            addEntry(entry.name, entry.avatar, entry.image);
+          });
+        }
       });
 
     </script>
