--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Firebase Example Controller</title>
+    <title>Check In</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <style>
       html, body {
